Now integrating with jquery.address plugin

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="js/knockout.namespaces.js"></script>
 <script type="text/javascript" src="js/koExternalTemplateEngine.js"></script>
 <script type="text/javascript" src="js/knockout_bindings.js"></script>
+<script type="text/javascript" src="js/jquery.address.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
