Simplified a lot, add the capability of using parameters, like 'show?id=1'

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
     <div id="menu">
         <ul>
-            <li data-bind="click: function() { VM.actualTemplate('main#index')}">Main</li>
-            <li data-bind="click: function() { VM.actualTemplate('users#index')}">Users</li>
-            <li data-bind="click: function() { VM.actualTemplate('cars#index')}">Cars</li>
-            <li data-bind="click: function() { VM.actualTemplate('admin#index')}">Admin</li>
-            <li data-bind="click: function() { VM.actualTemplate('about#index')}">About</li>
+            <li data-bind="click: function() { VM.actualTemplate('main/index')}">Main</li>
+            <li data-bind="click: function() { VM.actualTemplate('users/index')}">Users</li>
+            <li data-bind="click: function() { VM.actualTemplate('cars/index')}">Cars</li>
+            <li data-bind="click: function() { VM.actualTemplate('admin/index')}">Admin</li>
+            <li data-bind="click: function() { VM.actualTemplate('about/index')}">About</li>
         </ul>
     </div>
     <div id="content" data-bind="template: {name: templateMode}">
